--- a/index.html
+++ b/index.html
@@ -3,27 +3,123 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Мой первый проект</title>
+    <title>Оно тебе надо</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <header>
-      <h1>Добро пожаловать в мой первый проект!</h1>
+    <header class="header content-section" >
+      <nav class="nav">
+        <ul class="nav-list">
+            <li><p>главная</p></li>
+            <li><a href="#">посмотреть лоты</a></li>
+            <li><a href="#">об аукционе</a></li>
+        </ul>
+      </nav>
+      <a href="#" class="logo">
+        <img 
+          class="logo"
+          src="./images/logo.svg"
+          alt="Оно тебе надо">
+      </a>
+      <address class="address">
+        <a href="tel:+99995555555">+9 999 555 5555</a><br>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+        <p>наб. Принсентрахт 263-</p>
+        <p>265, Амстердам</p>
+      </address>
     </header>
-
     <main>
-      <section>
-        <h2>О проекте</h2>
-        <p>Это мой первый проект на GitHub.</p>
+      <section class="cover content-section">
+        <div class="cover-content">
+          <h1 class="cover-title">
+            <span class="cover-title-line cover-title-line-first">О Н О</span>
+            <span class="cover-title-line cover-title-line-center">Т Е Б Е</span>
+            <span class="cover-title-line cover-title-line-last">Н А Д О</span>
+          </h1>
+          <div class="cover-description">
+            <p class="cover-subtitle">АУКЦИОН ВЕЩЕЙ, В КОТОРЫЕ НИКТО НЕ ВЕРИЛ</p>
+            <button class="cover-button">СДЕЛАТЬ СТАВКУ</button>
+          </div>
+        </div>
       </section>
-
-      <section>
-        <h2>Контакты</h2>
-        <p>Email: feofanovaaleksandra1@gmail.com</p>
+      <section class="lots content-section">
+        <h2 class="lots-title">ЛОТЫ</h2>
+        <ul class="lots-list">
+          <li class="lots-item">
+            <a href="#" class="lot-link">
+              <article class="lot-card">
+                <h3 class="lot-title">ФИЛЬМ РЕЖИССЁРА, КОТОРЫЙ БРОСИЛ КИНОШКОЛУ</h3>
+                <p class="lot-description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots-item">
+            <a href="#" class="lot-link">
+              <article class="lot-card">
+                <h3 class="lot-title">КНИГА, ГДЕ ОПИСАН ОДИН СКУЧНЫЙ ДЕНЬ ИЗ ЖИЗНИ РЕКЛАМНОГО АГЕНТА</h3>
+                <p class="lot-description">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с древнеанглийским. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots-item">
+            <a href="#" class="lot-link">
+              <article class="lot-card">
+                <h3 class="lot-title">КАРТИНА, КОТОРУЮ ПОВТОРИТ ДАЖЕ 5-ЛЕТНИЙ СЫН МАМИНОЙ ПОДРУГИ</h3>
+                <p class="lot-description">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a href="#" class="lots-more">посмотреть больше</a>
+      </section>
+      <section class="about content-section">
+        <div class="about-column about-column-left">
+          <img 
+          class="logo-column"
+          src="./images/logo-column.svg"
+          alt="Оно тебе надо">
+        </div>
+        <div class="about-column about-column-right">
+          <h2 class="about-title">ОБ АУКЦИОНЕ</h2>
+          <div class="about-text">
+            <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+            <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятные. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+          </div>
+        </div>
       </section>
     </main>
-
-    <footer>
-      <p>&copy; 2024 Мой первый проект</p>
+    <footer class="footer content-section">
+      <address class="footer-address">
+        <a href="tel:+99995555555">+9 999 555 5555</a><br>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+        наб. Принсентрахт 263-265, Амстердам
+      </address>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li><p>главная</p></li>
+          <li><a href="#lots">посмотреть лоты</a></li>
+          <li><a href="#about">об аукционе</a></li>
+        </ul>
+      </nav>
+      <ul class="footer-social">
+        <li>
+          <a href="#" class="social-link">
+            <img src="./images/YouTube.svg" alt="YouTube">
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-link">
+            <img src="./images/vk.svg" alt="VK">
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-link">
+            <img src="./images/Pinterest.svg" alt="Pinterest">
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
